--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.8.1
+cffi==1.16.0
+cryptography==42.0.7
 Django==5.0.6
 django-debug-toolbar==4.3.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.1
 pillow==10.3.0
+pycparser==2.22
+PyMySQL==1.1.0
 sqlparse==0.5.0
 tzdata==2024.1
